Fixes text wrapping on repeatableLabel item without @ToolUi.CollectionItemProgress

--- a/tool-ui/src/main/webapp/style/v3/repeatable.less
+++ b/tool-ui/src/main/webapp/style/v3/repeatable.less
@@ -968,13 +968,17 @@
     > .repeatableLabel {
       background: white;
       border-bottom: 1px solid @color-border;
-      padding: 12px 368px 12px 45px;
+      padding: 12px 120px 12px 45px;
       &:after {
         top: 12px;
       }
     }
     > .removeButton {
       top: 10px;
+    }
+    
+    &[data-progress-field-value] .repeatableLabel {
+      padding-right: 368px;
     }
 
     &[data-toggle-field-value="false"], &.toBeRemoved {
